@@ -35,7 +35,7 @@ data Assume
         -- ^ /This assumption is unsafe, and may lead to incorrect build results in this run/.
         --   Assume that all rules reached are clean in this run. Only useful for benchmarking, to remove any overhead
         --   from running 'Development.Shake.Rule.storedValue' operations.
-    deriving (Eq,Ord,Show,Data,Typeable,Bounded,Enum)
+      deriving (Eq,Ord,Show,Read,Typeable,Data,Enum,Bounded)
 
 
 -- | Which lint checks to perform, used by 'shakeLint'.
@@ -46,7 +46,7 @@ data Lint
     | LintFSATrace
         -- ^ Track which files are accessed by command line programs
         -- using <https://github.com/jacereda/fsatrace fsatrace>.
-    deriving (Eq,Ord,Show,Data,Typeable,Bounded,Enum)
+      deriving (Eq,Ord,Show,Read,Typeable,Data,Enum,Bounded)
 
 
 -- | How should you determine if a file has changed, used by 'shakeChange'. The most common values are
@@ -67,7 +67,7 @@ data Change
     | ChangeModtimeOrDigest
         -- ^ A file is rebuilt if either its modification time or its digest has changed. A @touch@ will force a rebuild,
         --   but even if a files modification time is reset afterwards, changes will also cause a rebuild.
-    deriving (Eq,Ord,Show,Data,Typeable,Bounded,Enum)
+      deriving (Eq,Ord,Show,Read,Typeable,Data,Enum,Bounded)
 
 
 -- | Options to control the execution of Shake, usually specified by overriding fields in
@@ -228,11 +228,11 @@ data Verbosity
     | Loud   -- ^ Print errors and full command lines when running a 'Development.Shake.command' or 'Development.Shake.cmd' command.
     | Chatty -- ^ Print errors, full command line and status messages when starting a rule.
     | Diagnostic -- ^ Print messages for virtually everything (mostly for debugging).
-      deriving (Eq,Ord,Bounded,Enum,Show,Read,Typeable,Data)
+      deriving (Eq,Ord,Show,Read,Typeable,Data,Enum,Bounded)
 
 -- | An equality check and a cost.
 data EqualCost
     = EqualCheap -- ^ The equality check was cheap.
     | EqualExpensive -- ^ The equality check was expensive, as the results are not trivially equal.
     | NotEqual -- ^ The values are not equal.
-      deriving (Eq,Ord,Bounded,Enum,Show,Read,Typeable,Data)
+      deriving (Eq,Ord,Show,Read,Typeable,Data,Enum,Bounded)
